<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".ui.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:id="@+id/fiat_currency_btn"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
            tools:text="USD"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:inputType="number"
            android:hint="@string/amount"
            android:id="@+id/amount_text"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:indeterminate="true"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recycler_view"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/conversion_list_item"
        android:layout_height="match_parent"/>


</LinearLayout>